dom/base/test/jsmodules/importmaps/good/module_2.mjs
success("good/module_2.mjs");
