dom/base/test/jsmodules/importmaps/bad/module_2.mjs
throw "Shouldn't load file bad/module_2.mjs";
